# futures-sync-lib-rs

./: Cargo.toml  README.md
executable/: Cargo.toml
executable/src/: main.rs
mylib/: Cargo.toml
mylib/src/: lib.rs
mylib/src/asyn/: mod.rs  my_rpc.rs  say_hello.rs
mylib/src/sync/: mod.rs  my_rpc.rs  say_hello.rs
tokio-exec/: Cargo.toml
tokio-exec/src/: main.rs
