[package]
name = "mylib"
version = "0.1.0"
edition = "2024"

[dependencies]
flume = {version = "0.11.1", default-features = false, features = [ "async" ] }
futures-timer = "3.0.3"
futures-lite = "2.0"
smol = {version = "2.0.2", optional = true}

[dev-dependencies]
tokio = {version = "1.45.1", features = ["full"]}
smol = {version = "2.0.2"}


[features]

default = [
]

sync = ["dep:smol"]
